Add "saveFile" POST endpoint Refactor Tests