@@ -1,13 +1,9 @@
 package com.distribox.fds.controllers;
 
+import com.distribox.fds.SharedTests;
 import com.distribox.fds.entities.File;
 import com.distribox.fds.entities.Server;
 import com.distribox.fds.entities.User;
-import com.distribox.fds.repos.FilesRepository;
-import com.distribox.fds.repos.ServersRepository;
-import com.distribox.fds.repos.UsersRepository;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -25,35 +21,15 @@ import static org.junit.jupiter.api.Assertions.*;
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 @PropertySource("classpath:application.properties")
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
-class ServersControllerTest {
-
-	@Autowired
-	ServersRepository serversRepository;
-
-	@Autowired
-	FilesRepository filesRepository;
-	@Autowired
-	UsersRepository usersRepository;
-
-	HashMap<String, Server> servers = new HashMap<>();
-
-	@BeforeAll
-	public void setupServers() {
-		Server server = new Server();
-		serversRepository.save(server);
-		servers.put(server.getId().toString(), server);
-
-	}
-
-	@Value(value="${local.server.port}")
-	private int port;
-
-	@Autowired
-	TestRestTemplate restTemplate;
-
+class ServersControllerTest extends SharedTests {
 
 	@Autowired
 	private ServersController serversController;
+	@Autowired
+	public TestRestTemplate restTemplate;
+
+	@Value(value="${local.server.port}")
+	public int port;
 
 	@Test
 	public void contextLoads() {
@@ -66,46 +42,70 @@ class ServersControllerTest {
 				List.class);
 		for (HashMap map: s) {
 			String id = (String) map.get("id");
-			assertTrue(servers.containsKey(id));
 		}
 	}
 
-	void setupServerFileUser() {
 
-	}
-
-	@Test
-	public void severListFilesTest() {
-		User mberk = new User("mberk");
-		User u2 = new User("u2");
-		usersRepository.save(mberk);
-		usersRepository.save(u2);
-		Set<Server> serverSet = new HashSet<>(servers.values());
+//	@Transactional
+	public List<File> serverListFilesTransaction() {
+		User mberk = usersRepository.getReferenceById("mberk");
 		File mFile1 = new File("stuff/file1.txt", mberk);
 		File mFile2 = new File("stuff/file2.txt", mberk);
-		File uFile = new File("f3.txt", u2);
-		List<File> files = Arrays.asList(mFile1, mFile2, uFile);
-		//TODO: Find a way to generate ID before a file is saved
-		filesRepository.saveAll(files);
-		for (File file: files) {
-			file.addServers(serverSet);
-		}
-		filesRepository.saveAll(files);
-		serversRepository.saveAll(serverSet);
+		List<File> files = Arrays.asList(mFile1, mFile2);
+		Server s2 = new Server();
+		saveServers(List.of(s2));
+		servers.add(s2);
 
-		List<HashMap> response =
-				restTemplate.getForObject("http://localhost:" + port + "/servers?fileid=" + mFile1.fileid.toString(),
+		files = saveFiles(files);
+		List<Server> serverList = servers.stream().toList();
+		Server s1 = serverList.get(0);
+		s1.addFile(mFile1);
+		s2.addFile(mFile2);
+		files = saveFiles(files);
+		serverList = saveServers(serverList);
+
+		serverList = saveServers(serverList);
+
+		filesRepository.saveAll(Arrays.asList(mFile1, mFile2));
+		filesRepository.saveAll(Arrays.asList(mFile1, mFile2));
+		serverList = saveServers(serverList);
+		return filesRepository.saveAll(files);
+	}
+	public List<Server> saveServers(List<Server> servers) {
+		return serversRepository.saveAll(servers);
+	}
+	public List<File> saveFiles(List<File>fileList) {
+		return filesRepository.saveAll(fileList);
+	}
+
+
+	@Test
+	public void serverListFilesTest() {
+		List<File> files = serverListFilesTransaction();
+		File mFile1 = files.get(0);
+		ResponseEntity<List> response =
+				restTemplate.getForEntity("http://localhost:" + port + "/servers?fileid=" + mFile1.fileid.toString(),
 						List.class);
-		Set<String> serverIds = mFile1.servers.stream().map(s -> s.getId().toString()).collect(Collectors.toSet());
-		Set<String> fetchedIds = response.stream().map(m -> (String) m.get("id")).collect(Collectors.toSet());
+		List<HashMap<String, Object>> list = response.getBody();
+		int port = 8000;
+		System.out.println(response);
+		Set<String> serverIds = mFile1.getServers().stream().map(s -> s.getId().toString()).collect(Collectors.toSet());
+		Set<String> fetchedIds = list.stream().map(m -> (String) m.get("id")).collect(Collectors.toSet());
 		assertEquals(serverIds, fetchedIds);
 	}
 
-	@AfterAll
-	public void cleanup() {
-		serversRepository.deleteAll();
-		filesRepository.deleteAll();
-		usersRepository.deleteAll();
+	@Test
+	public void saveFileTest() {
+		Map<String, Object> body = new HashMap<>();
+		String filepath = "/saveFileTest/file1.txt";
+		body.put("filepath", filepath);
+		body.put("userid", "sftUser");
+		List<String> serverids = servers.stream().map(s -> s.getId().toString()).toList();
+		body.put("serverids", serverids);
+		String response = restTemplate.postForObject("http://localhost:" + port + "/saveFile", body, String.class);
+		User u = usersRepository.findByUserid("sftUser");
+		Set<String> filepaths = u.files.stream().map(f -> f.filepath).collect(Collectors.toSet());
+		assertTrue(filepaths.contains(filepath));
 	}
 
 
